[tool.poetry]
name = "pylark"
version = "0.0.13"
description = "Feishu/Lark Open API Python Sdk, Support ALL Open API and Event Callback."
authors = ["chyroc <chyroc@qq.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^21.2.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-rerunfailures = "^10.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"